Polish translation updated.

--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -44,6 +44,7 @@
   "blocking-node" : "Blokowanie {name}",
   "blocking-reason" : "Powód blokowania",
   "blocking-till" : "Blokowanie do",
+  "blog-moved" : "Wygląda na to, że blog <b>{name}</b> został przeniesiony pod nowy adres <b>{location}</b>. Chcesz otworzyć blog w nowej lokalizacji?",
   "bold" : "Pogrubienie",
   "bottom" : "Dół",
   "cancel" : "Anuluj",
@@ -98,7 +99,9 @@
   "connected" : "Zalogowano",
   "connect-home" : "Zaloguj się",
   "connecting" : "Łączenie",
+  "content-hidden-in-google-play" : "Cała treść jest ukryta na Androidzie (Google Play)",
   "content-not-accessible-android" : "Ten kontent nie jest dostępny na Androidzie",
+  "content-unhidden-in-google-play" : "Cała treść jest ukryta na Androidzie (Google Play) jest widoczna na Androidzie (Google Play)",
   "continue-reading" : "Kontynuuj czytanie →",
   "copy" : "Kopiuj",
   "copy-image-from-internet" : "Kopiuj obraz z internetu",
@@ -135,6 +138,8 @@
   "deny-everything-hide" : "Zabroń wszystkiego i ukryj w dyskusjach",
   "deny-everything-hide-in-discussion" : "Zabroń wszystkiego i ukryj w dyskusji",
   "deny-showing-blog-google-play" : "<0>Odrzuć</0> wyświetlanie bloga <1>{name}</1> na Androidzie (Google Play).",
+  "deny-showing-comment-google-play" : "<0>Odmów</0> wyświetlaniu komentarza <1>{commentName}</1> „{commentHeading}” do posta <1>{postingName}</1> „{postingHeading}” na Androidzie (Google Play).",
+  "deny-showing-post-google-play" : "<0>Odmów</0> wyświetlaniu postu <1>{name}</1> „{heading}” na Androidzie (Google Play).",
   "description" : "Opis",
   "details" : "Szczegóły",
   "details-blocking" : "Szczegóły blokowania",
@@ -149,7 +154,9 @@
   "donate" : "Wspomóż",
   "donate-to-recipient" : "Wspomóż <0>{recipientName}</0>",
   "donations-android-prohibited" : "Funkcja dotacji jest zabroniona w aplikacjach Android pobranych z Google Play zgodnie z <0>Polityką Płatności Google Play</0>.<1/><2/>Proszę użyć klienta Moera web do tego celu.",
+  "dont-ask-again" : "Nie pytaj ponownie",
   "dont-ask-next-time" : "Nie pytaj następnym razem",
+  "do-want-allow-android-google-play" : "<b>Czy chcesz, aby Twój blog był dostępny dzięki aplikacji Moera na Androida zainstalowanej z Google Play?</b><br><br>Odpowiedź „Tak” umożliwi szeryfowi zapoznanie się z treścią Twojego bloga i podjęcie decyzji (zgodnie z do regulaminu), które posty lub komentarze mają być ukryte w Moera na Androida.",
   "download" : "Pobierz",
   "downloading-image" : "Pobieranie obrazu...",
   "do-you-have-blog" : "Czy masz bloga Moera?",
@@ -231,6 +238,8 @@
   "hide" : "Ukryj",
   "hide-blog-google-play" : "Nie pokazuj bloga <0>{name}</0> w Androidzie (Google Play).",
   "hide-comment-google-play" : "Nie pokazuj komentarza \"{heading}\" w Androidzie (Google Play).",
+  "hide-content-in-google-play" : "Ukryj całą treść na Androidzie (Google Play)...",
+  "hide-content-user-in-google-play" : "Czy na pewno chcesz ukryć całą treść użytkownika <b>{name}</b> we wszystkich blogach na Androidzie (Google Play)?",
   "hide-ellipsis" : "Ukryj...",
   "hide-friendship" : "Ukryj znajomość",
   "hide-hidden-comments" : "Ukryj ukryte komentarze",
@@ -317,12 +326,15 @@
       "remote-comment-added" : "{comments} skomentował {posting} {heading} {reason}",
       "reply-comment" : "{replies} odpowiedział na Twój komentarz {heading} w {posting}",
       "sheriff-complain-added" : "Otrzymałeś nową skargę",
+      "sheriff-complain-decided" : "Szeryf odpowiedział na Twoją skargę {target}",
+      "sheriff-marked" : "Szeryf zakazał wyświetlanie {target} na Androidzie",
+      "sheriff-unmarked" : "Szeryf zezwolił na wyświetlanie {target} na Androidzie",
       "subscriber-added" : "{node} zasubskrybował Twój {feed}",
       "subscriber-deleted" : "{node} wypisał się z subskrypcji Twojego {feed}",
       "unblocked-user" : "{node} pozwolił Ci {operations} na {gender, select, male {jego} female {jej} other {ich}} posty",
       "unblocked-user-in-posting" : "{node} pozwolił Ci {operations} na {gender, select, male {jego} female {jej} other {ich}} post {heading}"
     },
-    "supported" : "{count, plural, =1 {{gender, select, female {poparla} other {poparl}}} other {poparly}}",
+    "supported" : "{count, plural, =1 {{gender, select, female {poparła} other {poparł}}} other {poparły}}",
     "target-your-blog" : "twój blog",
     "target-your-comment" : "twój komentarz {heading} do {posting}",
     "target-your-post" : "twój post {heading}",
@@ -331,6 +343,9 @@
   },
   "invitation-buttons" : "<0>Utwórz nowy blog</0><1>lub</1><2>Zaloguj się</2>",
   "italic" : "Kursywa",
+  "i-think-blog-hide" : "Uważam, że blog <b>{name}</b> powinien zostać ukryty.",
+  "i-think-comment-hide" : "Myślę, że komentarz „{heading}” powinien zostać ukryty.",
+  "i-think-post-hide" : "Myślę, że post „{heading}” powinien zostać ukryty.",
   "kick" : "Wyrzuć",
   "kick-ellipsis" : "Wyrzuć z dyskusji...",
   "kicking-node" : "Wyrzuć {name} z dyskusji",
@@ -352,6 +367,7 @@
   "mark-unread" : "Oznacz jako nieprzeczytane",
   "mention" : "Wzmianka",
   "mention-copied" : "Wzmianka skopiowana do schowka",
+  "menu" : "Menu",
   "message" : "Wiadomość",
   "more-links" : "{count} {count, plural, one {link} other {linki}}",
   "more-reactions" : "{remaining} więcej",
@@ -389,6 +405,7 @@
   "no-requests-available" : "Brak dostępnych żądań.",
   "not-allowed" : "Nie dozwolone",
   "not-connected-home" : "Nie zalogowano",
+  "note-complains-public" : "<b>Uwaga:</b> wszystkie skargi kierowane do szeryfa są publiczne. Możesz poprosić o niepublikowanie Twojej skargi z jakiegokolwiek powodu, ale ostateczna decyzja należy do szeryfa.",
   "no-text" : "(brak tekstu)",
   "not-following-comments" : "Nie śledzi komentarzy",
   "nothing-yet" : "Jeszcze nic.",
@@ -398,6 +415,7 @@
   "not-show-complains" : "Nie pokazuj skarg",
   "not-specified" : "Nie określono",
   "not-subscribed" : "Nie zasubskrybowano",
+  "not-subscribed-friend" : "Nie subskrybujesz jeszcze swojego znajomego. Czy chcesz subskrybować?",
   "not-valid-e-mail" : "Nieprawidłowy adres e-mail",
   "ok" : "OK",
   "only-new" : "Tylko nowe",
@@ -517,6 +535,7 @@
   "registered-name-secret" : "Tajna nazwa zarejestrowana",
   "register-new-name" : "Zarejestruj nową nazwę",
   "reject" : "Odrzuć",
+  "remind-later" : "Przypomnij mi później",
   "rename" : "Zmień nazwę",
   "rename-token" : "Zmień nazwę tokena",
   "reply" : "Odpowiedz",
@@ -569,6 +588,18 @@
           "design" : "Zgodnie z projektem",
           "square" : "Kwadratowy"
         },
+        "blocked-users_unfriend-on-block" : "Kiedy znajomy został zablokowany",
+        "blocked-users_unfriend-on-block-items" : {
+          "ask" : "Zapytać",
+          "no" : "Nic nie robić",
+          "yes" : "Usunąć z znajomych"
+        },
+        "blocked-users_unsubscribe-on-block" : "Gdy użytkownik, którego subskrybujesz, został zablokowany",
+        "blocked-users_unsubscribe-on-block-items" : {
+          "ask" : "Zapytać",
+          "no" : "Nic nie robić",
+          "yes" : "Zrezygnuj z subskrypcji"
+        },
         "clock_offset" : "Przesunięcie zegara od czasu rzeczywistego (w godzinach)",
         "comment_body-src-format_default" : "Domyślne formatowanie tekstu komentarza",
         "comment_body-src-format_default-items" : {
@@ -582,6 +613,12 @@
         "comment_submit-key" : "Wyślij komentarz po naciśnięciu klawisza",
         "entry_gallery_loop" : "Pętla widoku galerii",
         "feed_width" : "Szerokość kanału (w pikselach)",
+        "friends_subscribe-on-add" : "Gdy dodaesz znajomego, którego nie subskrybujesz",
+        "friends_subscribe-on-add-items" : {
+          "ask" : "Zapytać",
+          "no" : "Nic nie robić",
+          "yes" : "Subskrybuj"
+        },
         "full-name_display" : "Wyświetlanie pełnych nazw użytkowników",
         "full-name_display-items" : {
           "both" : "Obie",
@@ -644,6 +681,8 @@
       "ask_subscribe_allowed" : "Zezwól na prośby o subskrypcję",
       "ask_total_max" : "Nie więcej niż",
       "avatar_max-size" : "Maksymalny rozmiar awatarów",
+      "blocked-by-users_view" : "Lista użytkowników, którzy mnie zablokowali, jest widoczna dla",
+      "blocked-users_view" : "Lista zablokowanych użytkowników jest widoczna dla",
       "comment_deleted_lifetime" : "Usuń usunięte komentarze po",
       "comment_draft_lifetime" : "Usuń szkice komentarzy po",
       "comment_max-size" : "Maksymalny rozmiar komentarzy",
@@ -718,13 +757,14 @@
   "share" : "Udostępnij",
   "share-ellipsis" : "Udostępnij...",
   "share-page" : "Udostępnij stronę",
+  "sheriff-decided-not-publish-complains" : "Szeryf zdecydował się nie publikować skarg.",
   "sheriff-order" : "Rozkaz szeryfa",
   "sheriff-order-reason" : {
     "copyright" : "Naruszenie praw autorskich",
     "defamatory" : "Zniesławienie (w tym rasizm)",
     "impersonating" : "Podszywanie się",
     "malware" : "Złośliwe oprogramowanie",
-    "other" : "Nieznane",
+    "other" : "Inne",
     "privacy" : "Naruszenie prywatności",
     "scam" : "Oszustwo",
     "spam" : "Spam",
@@ -741,8 +781,17 @@
   "signature-verification-in-progress" : "Trwa weryfikacja podpisu",
   "sign-up" : "Utwórz blog",
   "size" : "Rozmiar",
+  "sorry-you-banned" : "Niestety nie możesz wykonać tej operacji, ponieważ autor Cię zbanował.",
+  "source-format" : {
+    "html" : "HTML",
+    "markdown" : "Markdown",
+    "plain-text" : "Brak formatowania"
+  },
   "spoiler" : "Spoiler",
   "spoiler-alert" : "spoiler!",
+  "still-friend-blocked-user" : "Zablokowany użytkownik <b>{name}</b> jest nadal Twoim znajomym. Czy chcesz usunąć ze znajomych?",
+  "still-subscribed-blocked-user" : "Nadal subskrybujesz zablokowanego użytkownika <b>{name}</b>. Czy chcesz zrezygnować z subskrypcji?",
+  "stop-asking" : "Przestań pytać",
   "strikeout" : "Przekreślenie",
   "subscribe" : "Subskrybuj",
   "subscribe-back" : "Subskrybuj z powrotem",
@@ -781,6 +830,8 @@
   "unhide" : "Odkryj",
   "unhide-blog-google-play" : "Czy na pewno chcesz odkryć blog <b>{name}</b> w Androidzie (Google Play)?",
   "unhide-comment-google-play" : "Czy na pewno chcesz odkryć komentarz \"{heading}\" w Androidzie (Google Play)?",
+  "unhide-content-in-google-play" : "Odkryj całą treść na Androidzie (Google Play)...",
+  "unhide-content-user-in-google-play" : "Czy na pewno chcesz ujawnić całą treść użytkownika <b>{name}</b> we wszystkich blogach na Androidzie (Google Play)?",
   "unhide-in-google-play" : "Odkryj w Androidzie (Google Play)...",
   "unhide-post-google-play" : "Czy na pewno chcesz odkryć post \"{heading}\" w Androidzie (Google Play)?",
   "unkick" : "Cofnij wyrzucenie",
@@ -802,6 +853,7 @@
   "upload-too-large" : "Plik \"{name}\" nie może zostać wgrany, ponieważ jego rozmiar ({size}) jest większy niż maksymalny dozwolony rozmiar ({maxSize})",
   "url" : "URL",
   "used-by-addon" : "Używane przez dodatek:",
+  "user-asks-not-publish-complain" : "Użytkownik prosi o niepublikowanie niniejszej skargi",
   "user-comments-hidden" : "Komentarze tego użytkownika są ukryte",
   "verify-signature" : "Zweryfikuj podpis",
   "view-as-chart" : "Wyświetl jako wykres",
@@ -812,8 +864,11 @@
   "view-images-grid" : "Wyświetl obrazy jako siatkę",
   "view-images-list" : "Wyświetl obrazy jako listę",
   "view-later-comments" : "Wyświetl późniejsze komentarze",
+  "view-previous-complains" : "Pokaż poprzednie skargi",
   "view-source" : "Wyświetl źródło",
   "view-source-title" : "Wyświetl źródło",
+  "visibility" : "Widoczność",
+  "want-allow-android-google-play" : "Chciałbym, aby mój blog był widoczny w aplikacji Moera na Androida zainstalowanej z Google Play. Zezwalam szeryfowi na zapoznanie się z treścią mojego bloga i decydowanie (zgodnie z zasadami), które posty lub komentarze mają być ukryte w Moera na Androida",
   "want-delete-addon" : "Czy na pewno chcesz usunąć dodatek \"{name}\"?",
   "want-delete-draft" : "Czy na pewno chcesz usunąć szkic?",
   "want-delete-token" : "Czy na pewno chcesz usunąć token \"{name}\"?",
@@ -825,7 +880,7 @@
   "width" : "Szerokość",
   "write-anything" : "Napisz cokolwiek...",
   "write-comment-here" : "Napisz komentarz do {mention} tutaj...",
-  "write-down-words" : "Proszę zapisz lub wydrukuj te słowa i przechowaj je w bezpiecznym miejscu. Będziesz potrzebował ich do wszelkich operacji z nazwą '{name}'. <0>Jeśli zgubisz te słowa, nie można ich odzyskać i całkowicie stracisz kontrolę nad swoją zarejestrowaną nazwą.</0>",
+  "write-down-words" : "Proszę zapisz lub wydrukuj te słowa i przechowaj je w bezpiecznym miejscu. Będziesz potrzebował ich do wszelkich operacji z nazwą '{name}'. <b>Jeśli zgubisz te słowa, nie można ich odzyskać i całkowicie stracisz kontrolę nad swoją zarejestrowaną nazwą.</b>",
   "written-down-words" : "Zapisałem wszystkie te słowa",
   "wrong-reset-token" : "Nieprawidłowy kod sekretny",
   "yes" : "Tak",
