Sending a request to the provider to delete the node.

--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -48,6 +48,7 @@
   "bold" : "Pogrubienie",
   "bottom" : "Dół",
   "cancel" : "Anuluj",
+  "cancel-request" : "Anuluj żądanie",
   "cannot-resolve-name " : "Nie można rozwiązać nazwy:",
   "caption" : "Podpis",
   "change" : "Zmień",
@@ -125,10 +126,12 @@
   "create-token" : "Utwórz token",
   "current" : "Obecny",
   "current-password" : "Obecne hasło",
+  "danger-request-delete-blog" : "<1>Niebezpieczeństwo!</1> Naciskając ten przycisk, wysyłasz żądanie do dostawcy Moera, aby <0>całkowicie usunął Twój blog ze wszystkimi danymi</0>. Wszystkie dane zostaną <0>utracone bez możliwości ich odzyskania</0>. Naciśnij ten przycisk tylko wtedy, gdy masz absolutną pewność!",
   "decision" : "Decyzja",
   "decision-sheriff-initiative" : "Decyzja została podjęta z inicjatywy szeryfa.",
   "decision-upon-complain" : "Decyzja została podjęta po <0>skardze</0> złożonej przez innego użytkownika.",
   "delete" : "Usuń",
+  "delete-blog" : "Usuń mój blog",
   "delete-comment" : "Czy na pewno chcesz usunąć komentarz \"{heading}\"?",
   "delete-draft" : "Usuń szkic",
   "delete-post" : "Czy na pewno chcesz usunąć post \"{heading}\"?",
@@ -563,6 +566,7 @@
   "selected-automatically" : "Wybrane automatycznie",
   "selected-preferred" : "Wybrane są preferowane",
   "send" : "Wyślij",
+  "send-request-delete-blog" : "Wysłałeś prośbę o usunięcie swojego bloga ze wszystkimi danymi",
   "set-as-default" : "Ustaw jako domyślne",
   "set-by-admin" : "ustawione przez administratora",
   "set-by-post-owner" : "ustawione przez autora posta",
@@ -748,6 +752,7 @@
       "other" : "Inne",
       "posting" : "Publikowanie",
       "reactions" : "Reakcje",
+      "removal" : "Usuwanie",
       "security" : "Bezpieczeństwo",
       "webui" : "Interfejs WWW"
     }
@@ -877,6 +882,7 @@
   "welcome" : "Witaj!",
   "where-from" : "Skąd to pochodzi?",
   "where-go" : "Dokąd chcesz się udać?",
+  "why-delete-blog" : "Dlaczego usuwasz blog? (opcjonalnie)",
   "width" : "Szerokość",
   "write-anything" : "Napisz cokolwiek...",
   "write-comment-here" : "Napisz komentarz do {mention} tutaj...",
