--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -48,6 +48,7 @@
   "bold" : "Полужирный",
   "bottom" : "В начало",
   "cancel" : "Отмена",
+  "cancel-request" : "Отменить запрос",
   "cannot-resolve-name " : "Не удалось опознать имя:",
   "caption" : "Заголовок",
   "change" : "Изменить",
@@ -125,10 +126,12 @@
   "create-token" : "Создать токен",
   "current" : "Текущий",
   "current-password" : "Текущий пароль",
+  "danger-request-delete-blog" : "<1>Опасно!</1> Нажав эту кнопку, вы отправите своему провайдеру Moera запрос на <0>полное удаление вашего блога со всеми данными</0>. Все ваши данные будут <0>потеряны без возможности восстановления</0>. Нажимайте эту кнопку только если вы абсолютно уверены!",
   "decision" : "Решение",
   "decision-sheriff-initiative" : "Решение было принято по инициативе шерифа.",
   "decision-upon-complain" : "Решение было принято по <0>жалобе</0> другого пользователя.",
   "delete" : "Удалить",
+  "delete-blog" : "Удалить мой блог",
   "delete-comment" : "Вы действительно хотите удалить комментарий \"{heading}\"?",
   "delete-draft" : "Удалить черновик",
   "delete-post" : "Вы действительно хотите удалить пост \"{heading}\"?",
@@ -563,6 +566,7 @@
   "selected-automatically" : "Выбирается автоматически",
   "selected-preferred" : "Выбранные предпочтительны",
   "send" : "Отправить",
+  "send-request-delete-blog" : "Вы отправили запрос на удаление своего блога со всей информацией",
   "set-as-default" : "Сделать значением по умолчанию",
   "set-by-admin" : "установлено администратором",
   "set-by-post-owner" : "установлено автором поста",
@@ -748,6 +752,7 @@
       "other" : "Прочее",
       "posting" : "Пост",
       "reactions" : "Реакции",
+      "removal" : "Удаление",
       "security" : "Безопасность",
       "webui" : "Web UI"
     }
@@ -877,6 +882,7 @@
   "welcome" : "Привет!",
   "where-from" : "Откуда он взят?",
   "where-go" : "Куда вы хотите пойти?",
+  "why-delete-blog" : "Почему вы удаляете блог? (необязательно)",
   "width" : "Ширина",
   "write-anything" : "Пишите что угодно...",
   "write-comment-here" : "Напишите тут комментарий для {mention}...",
