--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -48,6 +48,7 @@
   "bold" : "Жирний",
   "bottom" : "У початок",
   "cancel" : "Відмінити",
+  "cancel-request" : "Скасувати запит",
   "cannot-resolve-name " : "Не вдалося розпізнати ім'я:",
   "caption" : "Заголовок",
   "change" : "Змінити",
@@ -125,10 +126,12 @@
   "create-token" : "Створити токен",
   "current" : "Поточний",
   "current-password" : "Поточний пароль",
+  "danger-request-delete-blog" : "<1>Небезпечно!</1> Натискаючи цю кнопку, ви надсилаєте запит до вашого провайдера Moera на <0>повне видалення вашого блогу з усіма даними<//0>. Всі ваші дані будуть <0>втрачені без можливості відновлення</0>. Натискайте цю кнопку, тільки якщо ви абсолютно впевнені!",
   "decision" : "Рішення",
   "decision-sheriff-initiative" : "Рішення було прийнято за ініціативою шерифа.",
   "decision-upon-complain" : "Рішення було прийнято за <0>скаргою</0> іншого користувача.",
   "delete" : "Видалити",
+  "delete-blog" : "Видалити мій блог",
   "delete-comment" : "Ви дійсно бажаєте видалити коментар \"{heading}\"?",
   "delete-draft" : "Видалити чернетку",
   "delete-post" : "Ви дійсно бажаєте видалити пост \"{heading}\"?",
@@ -405,7 +408,7 @@
   "no-requests-available" : "Немає доступних прохань.",
   "not-allowed" : "Неприпустимо",
   "not-connected-home" : "Не увійшли",
-  "note-complains-public" : "<b>Примітка:</b> Усі скарги шерифу є відкритими. Ви можете попросити не публікувати вашу скаргу з якоїсь причини, але остаточне рішення приймає шериф.",
+  "note-complains-public" : "<b>Примітка:</b> Усі скарги шерифові є відкритими. Ви можете попросити не публікувати вашу скаргу з якоїсь причини, але остаточне рішення приймає шериф.",
   "no-text" : "(без текста)",
   "not-following-comments" : "Не слідкую за коментарями",
   "nothing-yet" : "Тут поки що порожньо.",
@@ -563,6 +566,7 @@
   "selected-automatically" : "Обирається автоматично",
   "selected-preferred" : "Обрані мають перевагу",
   "send" : "Надіслати",
+  "send-request-delete-blog" : "Ви надіслали запит на видалення свого блогу з усіма даними",
   "set-as-default" : "Зробити значенням за замовчуванням",
   "set-by-admin" : "встановлено адміністратором",
   "set-by-post-owner" : "встановлено автором поста",
@@ -748,6 +752,7 @@
       "other" : "Інше",
       "posting" : "Пост",
       "reactions" : "Реакції",
+      "removal" : "Видалення",
       "security" : "Безпека",
       "webui" : "Web UI"
     }
@@ -877,6 +882,7 @@
   "welcome" : "Вітаю!",
   "where-from" : "Звідки його взято?",
   "where-go" : "Куди ви бажаєте піти?",
+  "why-delete-blog" : "Чому ви видаляєте блог? (за бажанням)",
   "width" : "Ширина",
   "write-anything" : "Пишіть що завгодно...",
   "write-comment-here" : "Напишіть тут коментар для {mention}...",
