--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -48,6 +48,7 @@
   "bold" : "Bold",
   "bottom" : "Bottom",
   "cancel" : "Cancel",
+  "cancel-request" : "Cancel the request",
   "cannot-resolve-name " : "Cannot resolve name:",
   "caption" : "Caption",
   "change" : "Change",
@@ -125,10 +126,12 @@
   "create-token" : "Create a Token",
   "current" : "Current",
   "current-password" : "Current password",
+  "danger-request-delete-blog" : "<1>Danger!</1> By pressing this button, you send a request to your Moera provider to <0>delete your blog completely with all the data</0>. All your data will be <0>lost without recovery</0>. Press this button only if you are absolutely sure!",
   "decision" : "Decision",
   "decision-sheriff-initiative" : "The decision was made at the sheriff's initiative.",
   "decision-upon-complain" : "The decision was made upon <0>a complaint</0> by another user.",
   "delete" : "Delete",
+  "delete-blog" : "Delete my blog",
   "delete-comment" : "Do you really want to delete the comment \"{heading}\"?",
   "delete-draft" : "Delete draft",
   "delete-post" : "Do you really want to delete the post \"{heading}\"?",
@@ -563,6 +566,7 @@
   "selected-automatically" : "Selected automatically",
   "selected-preferred" : "Selected are preferred",
   "send" : "Send",
+  "send-request-delete-blog" : "You have sent a request to delete your blog with all the data",
   "set-as-default" : "Set as default",
   "set-by-admin" : "set by admin",
   "set-by-post-owner" : "set by post author",
@@ -748,6 +752,7 @@
       "other" : "Other",
       "posting" : "Post",
       "reactions" : "Reactions",
+      "removal" : "Removal",
       "security" : "Security",
       "webui" : "Web UI"
     }
@@ -877,6 +882,7 @@
   "welcome" : "Welcome!",
   "where-from" : "Where it comes from?",
   "where-go" : "Where do you want to go?",
+  "why-delete-blog" : "Why do you delete the blog? (optional)",
   "width" : "Width",
   "write-anything" : "Write anything...",
   "write-comment-here" : "Write a comment to {mention} here...",
