--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -130,6 +130,7 @@
   "decision-upon-complain" : "Решение было принято по <0>жалобе</0> другого пользователя.",
   "delete" : "Удалить",
   "delete-blog" : "Удалить мой блог",
+  "delete-blog-need-log-in" : "Чтобы удалить свой блог, вы должны авторизоваться",
   "delete-comment" : "Вы действительно хотите удалить комментарий \"{heading}\"?",
   "delete-draft" : "Удалить черновик",
   "delete-post" : "Вы действительно хотите удалить пост \"{heading}\"?",
@@ -568,6 +569,7 @@
   "set-as-default" : "Сделать значением по умолчанию",
   "set-by-admin" : "установлено администратором",
   "set-by-post-owner" : "установлено автором поста",
+  "set-email-provider-contact" : "Вам необходимо указать адрес электронной почты в своем профиле, чтобы провайдер мог связаться с вами при необходимости. Пожалуйста, перейдите на страницу своего профиля, нажмите кнопку \"Редактировать\" и заполните поле \"E-mail\".",
   "set-home-password" : "Установка домашнего пароля",
   "set-password-and-connect" : "Установить пароль и войти",
   "setting" : {
