--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -130,6 +130,7 @@
   "decision-upon-complain" : "Рішення було прийнято за <0>скаргою</0> іншого користувача.",
   "delete" : "Видалити",
   "delete-blog" : "Видалити мій блог",
+  "delete-blog-need-log-in" : "Щоб видалити свій блог, ви мусите авторизуватися",
   "delete-comment" : "Ви дійсно бажаєте видалити коментар \"{heading}\"?",
   "delete-draft" : "Видалити чернетку",
   "delete-post" : "Ви дійсно бажаєте видалити пост \"{heading}\"?",
@@ -568,6 +569,7 @@
   "set-as-default" : "Зробити значенням за замовчуванням",
   "set-by-admin" : "встановлено адміністратором",
   "set-by-post-owner" : "встановлено автором поста",
+  "set-email-provider-contact" : "Вам необхідно вказати адресу електронної пошти у своєму профілі, щоб провайдер міг зв'язатися з вами у разі потреби. Будь ласка, перейдіть на сторінку свого профілю, натисніть кнопку \"Редагувати\" та заповніть поле \"E-mail\".",
   "set-home-password" : "Встановлення домашнього пароля",
   "set-password-and-connect" : "Встановити пароль та увійти",
   "setting" : {
