Make RemovalPage to comply better with Google Play account deletion policy.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -124,13 +124,14 @@
   "create-token" : "Create a Token",
   "current" : "Current",
   "current-password" : "Current password",
-  "danger-request-delete-blog" : "<1>Danger!</1> By pressing this button, you send a request to your Moera provider to <0>delete your blog completely with all the data</0>. All your data will be <0>lost without recovery</0>. Press this button only if you are absolutely sure!",
+  "danger-request-delete-blog" : "<1>Danger!</1> By submitting this form, you send a request to your Moera provider to <0>delete your blog completely with all the data, including all personal information</0>. All your data will be <0>lost without recovery</0>. Press this button only if you are absolutely sure!",
   "decision" : "Decision",
   "decision-sheriff-initiative" : "The decision was made at the sheriff's initiative.",
   "decision-upon-complain" : "The decision was made upon <0>a complaint</0> by another user.",
   "delete" : "Delete",
+  "delete-account-moera" : "Delete my account in Moera",
+  "delete-account-need-log-in" : "To delete your account, you need to",
   "delete-blog" : "Delete my blog",
-  "delete-blog-need-log-in" : "To delete your blog, you need to authorize",
   "delete-comment" : "Do you really want to delete the comment \"{heading}\"?",
   "delete-draft" : "Delete draft",
   "delete-post" : "Do you really want to delete the post \"{heading}\"?",
