--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -124,13 +124,14 @@
   "create-token" : "Создать токен",
   "current" : "Текущий",
   "current-password" : "Текущий пароль",
-  "danger-request-delete-blog" : "<1>Опасно!</1> Нажав эту кнопку, вы отправите своему провайдеру Moera запрос на <0>полное удаление вашего блога со всеми данными</0>. Все ваши данные будут <0>потеряны без возможности восстановления</0>. Нажимайте эту кнопку только если вы абсолютно уверены!",
+  "danger-request-delete-blog" : "<1>Опасно!</1> Отправив эту форму, вы отправите своему провайдеру Moera запрос на <0>полное удаление вашего блога со всеми данными, включая всю личную информацию</0>. Все ваши данные будут <0>потеряны без возможности восстановления</0>. Нажимайте эту кнопку только если вы абсолютно уверены!",
   "decision" : "Решение",
   "decision-sheriff-initiative" : "Решение было принято по инициативе шерифа.",
   "decision-upon-complain" : "Решение было принято по <0>жалобе</0> другого пользователя.",
   "delete" : "Удалить",
+  "delete-account-moera" : "Удалить мой аккаунт в Moera",
+  "delete-account-need-log-in" : "Чтобы удалить свой аккаунт, вы должны в него",
   "delete-blog" : "Удалить мой блог",
-  "delete-blog-need-log-in" : "Чтобы удалить свой блог, вы должны авторизоваться",
   "delete-comment" : "Вы действительно хотите удалить комментарий \"{heading}\"?",
   "delete-draft" : "Удалить черновик",
   "delete-post" : "Вы действительно хотите удалить пост \"{heading}\"?",
