--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -124,13 +124,14 @@
   "create-token" : "Створити токен",
   "current" : "Поточний",
   "current-password" : "Поточний пароль",
-  "danger-request-delete-blog" : "<1>Небезпечно!</1> Натискаючи цю кнопку, ви надсилаєте запит до вашого провайдера Moera на <0>повне видалення вашого блогу з усіма даними<//0>. Всі ваші дані будуть <0>втрачені без можливості відновлення</0>. Натискайте цю кнопку, тільки якщо ви абсолютно впевнені!",
+  "danger-request-delete-blog" : "<1>Небезпечно!</1> Надіславши цю форму, ви надсилаєте запит до вашого провайдера Moera на <0>повне видалення вашого блогу з усіма даними, включно з усією особистою інформацією</0>. Всі ваші дані будуть <0>втрачені без можливості відновлення</0>. Натискайте цю кнопку, тільки якщо ви абсолютно впевнені!",
   "decision" : "Рішення",
   "decision-sheriff-initiative" : "Рішення було прийнято за ініціативою шерифа.",
   "decision-upon-complain" : "Рішення було прийнято за <0>скаргою</0> іншого користувача.",
   "delete" : "Видалити",
+  "delete-account-moera" : "Видалити мій аккаунт у Moera",
+  "delete-account-need-log-in" : "Щоб видалити свій аккаунт, вам потрібно до нього",
   "delete-blog" : "Видалити мій блог",
-  "delete-blog-need-log-in" : "Щоб видалити свій блог, ви мусите авторизуватися",
   "delete-comment" : "Ви дійсно бажаєте видалити коментар \"{heading}\"?",
   "delete-draft" : "Видалити чернетку",
   "delete-post" : "Ви дійсно бажаєте видалити пост \"{heading}\"?",
