--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -124,13 +124,14 @@
   "create-token" : "Utwórz token",
   "current" : "Obecny",
   "current-password" : "Obecne hasło",
-  "danger-request-delete-blog" : "<1>Niebezpieczeństwo!</1> Naciskając ten przycisk, wysyłasz żądanie do dostawcy Moera, aby <0>całkowicie usunął Twój blog ze wszystkimi danymi</0>. Wszystkie dane zostaną <0>utracone bez możliwości ich odzyskania</0>. Naciśnij ten przycisk tylko wtedy, gdy masz absolutną pewność!",
+  "danger-request-delete-blog" : "<1>Niebezpieczeństwo!</1> Przesyłając ten formularz, wysyłasz prośbę do swojego dostawcy Moera o <0>całkowite usunięcie Twojego bloga wraz ze wszystkimi danymi, w tym wszystkimi danymi osobowymi</0>. Wszystkie dane zostaną <0>utracone bez możliwości ich odzyskania</0>. Naciśnij ten przycisk tylko wtedy, gdy masz absolutną pewność!",
   "decision" : "Decyzja",
   "decision-sheriff-initiative" : "Decyzja została podjęta z inicjatywy szeryfa.",
   "decision-upon-complain" : "Decyzja została podjęta po <0>skardze</0> złożonej przez innego użytkownika.",
   "delete" : "Usuń",
+  "delete-account-moera" : "Usuń moje konto w Moera",
+  "delete-account-need-log-in" : "Aby usunąć swoje konto, musisz się",
   "delete-blog" : "Usuń mój blog",
-  "delete-blog-need-log-in" : "Aby usunąć swój blog, musisz się autoryzować",
   "delete-comment" : "Czy na pewno chcesz usunąć komentarz \"{heading}\"?",
   "delete-draft" : "Usuń szkic",
   "delete-post" : "Czy na pewno chcesz usunąć post \"{heading}\"?",
