Translation of "Login incorrect" message.

--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -363,6 +363,7 @@
   "load-more" : "Загрузить ещё...",
   "load-newer-posts" : "Загрузить новые посты",
   "load-older-posts" : "Загрузить старые посты",
+  "login-incorrect" : "Неверное имя блога или пароль",
   "male" : "Мужской",
   "male-short" : "м.",
   "mark-all-read" : "Все прочитаны",
@@ -392,6 +393,7 @@
   "new-password" : "Новый пароль",
   "new-post-button" : "Написать",
   "new-post-item" : "Новый пост",
+  "new-posts-newsfeed" : "У вас {count, plural, =0 {нет новых постов} =1 {один новый пост} one {# новый пост} few {# новых поста} other {# новых постов}} в ленте новостей",
   "new-post-title" : "Новый пост",
   "new-token-created" : "Создан новый токен",
   "next-image" : "Следующая картинка",
