--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -363,6 +363,7 @@
   "load-more" : "Завантажити ще...",
   "load-newer-posts" : "Завантажити нові пости",
   "load-older-posts" : "Завантажити старі пости",
+  "login-incorrect" : "Неправильне ім'я блога або пароль",
   "male" : "Чоловічий",
   "male-short" : "ч.",
   "mark-all-read" : "Усі прочитані",
@@ -392,6 +393,7 @@
   "new-password" : "Новий пароль",
   "new-post-button" : "Написати",
   "new-post-item" : "Новий пост",
+  "new-posts-newsfeed" : "У вас {count, plural, =0 {немає нових постів} =1 {є новий пост} one {# новий пост} few {# нових поста} other {# нових постів}} у стрічці новин",
   "new-post-title" : "Новий пост",
   "new-token-created" : "Створений новий токен",
   "next-image" : "Наступна картинка",
