--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -363,6 +363,7 @@
   "load-more" : "Load more...",
   "load-newer-posts" : "Load newer posts",
   "load-older-posts" : "Load older posts",
+  "login-incorrect" : "Blog name or password is incorrect",
   "male" : "Male",
   "male-short" : "m.",
   "mark-all-read" : "Mark All as Read",
@@ -392,6 +393,7 @@
   "new-password" : "New password",
   "new-post-button" : "New post",
   "new-post-item" : "New post",
+  "new-posts-newsfeed" : "You have {count, plural, =0 {no new posts} one {a new post} other {# new posts}} in your News feed",
   "new-post-title" : "New Post",
   "new-token-created" : "New Token Created",
   "next-image" : "Next image",
