--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -363,6 +363,7 @@
   "load-more" : "Wczytaj więcej...",
   "load-newer-posts" : "Wczytaj nowsze posty",
   "load-older-posts" : "Wczytaj starsze posty",
+  "login-incorrect" : "Nazwa bloga lub hasło są nieprawidłowe",
   "male" : "Mężczyzna",
   "male-short" : "m.",
   "mark-all-read" : "Oznacz wszystko jako przeczytane",
@@ -392,6 +393,7 @@
   "new-password" : "Nowe hasło",
   "new-post-button" : "Nowy post",
   "new-post-item" : "Nowy post",
+  "new-posts-newsfeed" : "{count, plural, =0 {Nie masz nowych postów} =1 {Masz nowy post} one {Masz # nowy post} few {Masz # nowe posty} other {Masz # nowych postów}} w swoim kanale aktualności",
   "new-post-title" : "Nowy post",
   "new-token-created" : "Utworzono nowy token",
   "next-image" : "Następny obrazek",
