Pass confirmBox() parameters in an object. Add missing translations.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -131,6 +131,7 @@
   "delete" : "Delete",
   "delete-account-moera" : "Delete my account in Moera",
   "delete-account-need-log-in" : "To delete your account, you need to",
+  "delete-avatar" : "Delete the avatar?",
   "delete-blog" : "Delete my blog",
   "delete-comment" : "Do you really want to delete the comment \"{heading}\"?",
   "delete-draft" : "Delete draft",
