Polish translation updated.

--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -306,10 +306,10 @@
       "blocked-user" : "{node} zablokował/a Cię przed {operations} {gender, select, male {jego} female {jej} other {ich}} postami {period}",
       "blocked-user-in-posting" : "{node} zablokował/a Cię przed {operations} {gender, select, male {jego} female {jej} other {ich}} postem {heading} {period}",
       "comment-added" : "{comments} skomentował/a Twój post {heading}",
-      "comment-media-reaction-added" : "{reactions} zareagował/a na media w Twoim komentarzu {heading} na {posting}",
+      "comment-media-reaction-added" : "{reactions} media w Twoim komentarzu {heading} na {posting}",
       "comment-media-reaction-failed" : "Nie udało się zareagować na media w komentarzu {commentNode} {commentHeading} do posta {postingNode} {postingHeading}",
       "comment-post-task-failed" : "Nie udało się dodać komentarza do posta {node} {heading}",
-      "comment-reaction-added" : "{reactions} zareagował/a na Twój komentarz {heading} na {posting}",
+      "comment-reaction-added" : "{reactions} Twój komentarz {heading} na {posting}",
       "comment-reaction-task-failed" : "Nie udało się zareagować na komentarz {commentNode} {commentHeading} do posta {postingNode} {postingHeading}",
       "comment-update-task-failed" : "Nie udało się zaktualizować komentarza {commentHeading} do posta {node} {postingHeading}",
       "friend-added" : "{node} dodał/a Cię do grupy znajomych \"{group}\"",
@@ -319,14 +319,14 @@
       "friend-group-deleted" : "{node} {gender, select, female {usunąła} other {usunął}} grupe znajomych \"{group}\"",
       "mention-comment" : "{node} wspomniał/a o Tobie w komentarzu {commentHeading} na {posting} {postingHeading}",
       "mention-posting" : "{node} wspomniał/a o Tobie w poście {heading}",
-      "posting-media-reaction-added" : "{reactions} zareagował/a na media w Twoim poście {heading} na {node}",
+      "posting-media-reaction-added" : "{reactions} media w Twoim poście {heading} na {node}",
       "posting-media-reaction-failed" : "Nie udało się zareagować na media w poście {node} {heading}",
       "posting-post-task-failed" : "Nie udało się dodać Twojego posta do bloga {node}",
       "posting-reaction-task-failed" : "Nie udało się zareagować na post {node} {heading}",
       "posting-subscribe-task-failed" : "Nie udało się zapisać subskrypcji komentarzy do posta {heading} w {node}",
       "posting-updated" : "{node} zaktualizował swój post {heading}",
       "posting-update-task-failed" : "Nie udało się opublikować Twojego posta {heading} na blogu {node}",
-      "reaction-added" : "{reactions} zareagował na Twój post {heading}",
+      "reaction-added" : "{reactions} Twój post {heading}",
       "remote-comment-added" : "{comments} skomentował {posting} {heading} {reason}",
       "reply-comment" : "{replies} odpowiedział na Twój komentarz {heading} w {posting}",
       "sheriff-complain-added" : "Otrzymałeś nową skargę",
